show detail blog in admin

--- a/web.config
+++ b/web.config
@@ -26,3 +26,9 @@
     </rewrite>
   </system.webServer>
 </configuration>
+<system.webServer>
+ <staticContent>
+   <remove fileExtension=".woff"/>
+   <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+ </staticContent>
+</system.webServer>
